java models: module import declarations (M7/D-182, JEP 511)
Third deferred Java-26 enhancement (finalized, no --enable-preview). Generated
model files carried per-type library imports; JEP 511 module import declarations
collapse them. The model layer only imports from java.util and java.time (both
java.base), so those become a single `import module java.base;`; the SDK's own
com.box.sdk.core.Tristate stays an explicit single-type import.

Safe against name capture: a module import is on-demand, and both local type
declarations and explicit single-type imports take precedence (JLS shadowing), so
a model named like a java.base type can't be captured. The only actual references
(Optional/List/Map/LocalDate/OffsetDateTime) are unique simple names within
java.base, so no ambiguity. Confirmed by the -Werror gate: the whole 900-file
real-spec tree still compiles javac --release 26 -Xlint:all -Werror clean and
against the real runtime (swap test) — the compiler is the oracle, and there is
no collision.

Deliberately scoped to java.base (in_java_base matches only java.util./java.time.)
so a future non-base import stays explicit. Deterministic (FR-6.2). Docs:
DECISIONS D-182; PROGRESS + deferred list updated. fmt + clippy clean.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>